Fixed bug: urls begin with / or // or empty href